fixed firefox height,added overflow hidden on html body

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,8 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     height:100vh;
     width:100vw;
+    scrollbar-width: none;
+    overflow: hidden;
 }
 
 a {
@@ -17,6 +19,7 @@ a {
   box-sizing: border-box;
     -ms-overflow-style: none;
 }
+
 
 ::-webkit-scrollbar {
     width: 0px;
